@@ -24,6 +24,7 @@ import org.elasticsearch.plugins.ClusterCoordinationPlugin;
 import org.elasticsearch.plugins.MetadataUpgrader;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.TestClusterCustomMetadata;
+import org.elasticsearch.test.TestProjectCustomMetadata;
 
 import java.io.IOException;
 import java.util.Arrays;
@@ -31,8 +32,10 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.UnaryOperator;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
@@ -47,7 +50,7 @@ public class GatewayMetaStateTests extends ESTestCase {
                 IndexTemplateMetadata.builder("added_test_template").patterns(randomIndexPatterns()).build()
             );
             return templates;
-        }));
+        }), List.of());
 
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
@@ -57,7 +60,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testNoMetadataUpgrade() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -68,7 +71,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testCustomMetadataValidation() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         try {
             GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         } catch (IllegalStateException e) {
@@ -78,7 +81,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testIndexMetadataUpgrade() {
         Metadata metadata = randomMetadata();
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList());
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.emptyList(), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(true), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -89,7 +92,7 @@ public class GatewayMetaStateTests extends ESTestCase {
 
     public void testCustomMetadataNoChange() {
         Metadata metadata = randomMetadata(new CustomMetadata1("data"));
-        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new));
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(HashMap::new), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertSame(upgrade, metadata);
         assertTrue(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -98,11 +101,77 @@ public class GatewayMetaStateTests extends ESTestCase {
         }
     }
 
+    public void testCustomMetadata_appliesUpgraders() {
+        ProjectCustomMetadata2 custom2 = new ProjectCustomMetadata2("some data");
+        // Test with a ProjectCustomMetadata1 and a ProjectCustomMetadata2...
+        Metadata originalMetadata = Metadata.builder()
+            .putCustom(ProjectCustomMetadata1.TYPE, new ProjectCustomMetadata1("data"))
+            .putCustom(ProjectCustomMetadata2.TYPE, custom2)
+            .build();
+        // ...and two sets of upgraders which affect ProjectCustomMetadata1 and some other types...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> customUpgraders = Map.of(
+            ProjectCustomMetadata1.TYPE,
+            toUpgrade -> new ProjectCustomMetadata1("new " + ((ProjectCustomMetadata1) toUpgrade).getData()),
+            "not_" + ProjectCustomMetadata1.TYPE,
+            toUpgrade -> {
+                fail("This upgrader should not be invoked");
+                return toUpgrade;
+            }
+        );
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> moreCustomUpgraders = Map.of(
+            "also_not_" + ProjectCustomMetadata1.TYPE,
+            toUpgrade -> {
+                fail("This upgrader should not be invoked");
+                return toUpgrade;
+            }
+        );
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the ProjectCustomMetadata1 has been upgraded...
+        assertEquals(new ProjectCustomMetadata1("new data"), upgradedMetadata.getProject().custom(ProjectCustomMetadata1.TYPE));
+        // ...but the ProjectCustomMetadata2 is untouched.
+        assertSame(custom2, upgradedMetadata.getProject().custom(ProjectCustomMetadata2.TYPE));
+    }
+
+    public void testCustomMetadata_appliesMultipleUpgraders() {
+        // Test with a ProjectCustomMetadata1 and a ProjectCustomMetadata2...
+        Metadata originalMetadata = Metadata.builder()
+            .putCustom(ProjectCustomMetadata1.TYPE, new ProjectCustomMetadata1("data"))
+            .putCustom(ProjectCustomMetadata2.TYPE, new ProjectCustomMetadata2("other data"))
+            .build();
+        // ...and a set of upgraders which affects both of those...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> customUpgraders = Map.of(
+            ProjectCustomMetadata1.TYPE,
+            toUpgrade -> new ProjectCustomMetadata1("new " + ((ProjectCustomMetadata1) toUpgrade).getData()),
+            ProjectCustomMetadata2.TYPE,
+            toUpgrade -> new ProjectCustomMetadata2("new " + ((ProjectCustomMetadata2) toUpgrade).getData())
+        );
+        // ...and another set of upgraders which applies a second upgrade to ProjectCustomMetadata2...
+        Map<String, UnaryOperator<Metadata.ProjectCustom>> moreCustomUpgraders = Map.of(
+            ProjectCustomMetadata2.TYPE,
+            toUpgrade -> new ProjectCustomMetadata2("more " + ((ProjectCustomMetadata2) toUpgrade).getData())
+        );
+        MetadataUpgrader metadataUpgrader = new MetadataUpgrader(List.of(HashMap::new), List.of(customUpgraders, moreCustomUpgraders));
+        Metadata upgradedMetadata = GatewayMetaState.upgradeMetadata(
+            originalMetadata,
+            new MockIndexMetadataVerifier(false),
+            metadataUpgrader
+        );
+        // ...and assert that the first upgrader has been applied to the ProjectCustomMetadata1...
+        assertEquals(new ProjectCustomMetadata1("new data"), upgradedMetadata.getProject().custom(ProjectCustomMetadata1.TYPE));
+        // ...and both upgraders have been applied to the ProjectCustomMetadata2.
+        assertEquals(new ProjectCustomMetadata2("more new other data"), upgradedMetadata.getProject().custom(ProjectCustomMetadata2.TYPE));
+    }
+
     public void testIndexTemplateValidation() {
         Metadata metadata = randomMetadata();
         MetadataUpgrader metadataUpgrader = new MetadataUpgrader(Collections.singletonList(customs -> {
             throw new IllegalStateException("template is incompatible");
-        }));
+        }), List.of());
         String message = expectThrows(
             IllegalStateException.class,
             () -> GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader)
@@ -136,8 +205,7 @@ public class GatewayMetaStateTests extends ESTestCase {
                     .build()
             );
             return indexTemplateMetadatas;
-
-        }));
+        }), List.of());
         Metadata upgrade = GatewayMetaState.upgradeMetadata(metadata, new MockIndexMetadataVerifier(false), metadataUpgrader);
         assertNotSame(upgrade, metadata);
         assertFalse(Metadata.isGlobalStateEquals(upgrade, metadata));
@@ -215,6 +283,52 @@ public class GatewayMetaStateTests extends ESTestCase {
         public static final String TYPE = "custom_md_1";
 
         CustomMetadata1(String data) {
+            super(data);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TYPE;
+        }
+
+        @Override
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
+        }
+
+        @Override
+        public EnumSet<Metadata.XContentContext> context() {
+            return EnumSet.of(Metadata.XContentContext.GATEWAY);
+        }
+    }
+
+    private static class ProjectCustomMetadata1 extends TestProjectCustomMetadata {
+        public static final String TYPE = "custom_project_md_1";
+
+        ProjectCustomMetadata1(String data) {
+            super(data);
+        }
+
+        @Override
+        public String getWriteableName() {
+            return TYPE;
+        }
+
+        @Override
+        public TransportVersion getMinimalSupportedVersion() {
+            return TransportVersion.current();
+        }
+
+        @Override
+        public EnumSet<Metadata.XContentContext> context() {
+            return EnumSet.of(Metadata.XContentContext.GATEWAY);
+        }
+    }
+
+    private static class ProjectCustomMetadata2 extends TestProjectCustomMetadata {
+        public static final String TYPE = "custom_project_md_2";
+
+        ProjectCustomMetadata2(String data) {
             super(data);
         }
 
